--- a/app/styles/layout/_header.scss
+++ b/app/styles/layout/_header.scss
@@ -4,7 +4,7 @@
   background-color: #599111;
 }
 .header__top {
-  padding: rem(20px) 0;
+  padding: 2rem 0;
   text-align: center;
   color: #ffffff;
 }
