--- a/app/templates/basic/_template.pug
+++ b/app/templates/basic/_template.pug
@@ -7,9 +7,9 @@ html(lang="en").no-js
   block head
     head
       +head({
-        "title": "start-kit-project",
+        "title": "forest",
         "author": "Anatoliy Vershinin",
-        "description": "Worshop"
+        "description": "Personal site-portfolio"
       })
     |
  
