--- a/app/templates/pages/index.pug
+++ b/app/templates/pages/index.pug
@@ -4,14 +4,14 @@ block content
 
   .wrapper
     //HEADER
-    include ../layout/_header
+    //include ../layout/_header
     //END HEADER
     |
     |
     //MAIN CONTENT
 
-    main.content
-      //- include ../layout/_hero
+    main.content.content--index
+      include ../layout/_welcome
       //- |
       //- |
       //- include ../layout/_about
@@ -19,5 +19,5 @@ block content
     |
     |
     //MAIN FOOTER
-    include ../layout/_footer
+    //include ../layout/_footer
     //END FOOTER
