--- a/app/styles/basic/_pixel-glass.scss
+++ b/app/styles/basic/_pixel-glass.scss
@@ -4,27 +4,27 @@ html {
 }
 @media screen and (min-width: 320px) {
   html {
-    background-image: url("../../img/preview/buffalo-index-desktop.jpg");
+    background-image: url("../../img/preview/welcome-desktop.jpg");
   }
 
 }
-@media screen and (min-width: 480px) {
-  html {
-    background-image: url("../../img/preview/buffalo-index-desktop.jpg");
-  }
-}
-@media screen and (min-width: 768px) {
-  html {
-    background-image: url("../../img/preview/buffalo-index-desktop.jpg");
-  }
-}
-@media screen and (min-width: 992px) {
-  html {
-    background-image: url("../../img/preview/buffalo-index-desktop.jpg");
-  }
-}
-@media screen and (min-width: 1200px) {
-  html {
-    background-image: url("../../img/preview/buffalo-index-desktop.jpg");
-  }
-}
+//@media screen and (min-width: 480px) {
+//  html {
+//    background-image: url("../../img/preview/buffalo-index-desktop.jpg");
+//  }
+//}
+//@media screen and (min-width: 768px) {
+//  html {
+//    background-image: url("../../img/preview/buffalo-index-desktop.jpg");
+//  }
+//}
+//@media screen and (min-width: 992px) {
+//  html {
+//    background-image: url("../../img/preview/buffalo-index-desktop.jpg");
+//  }
+//}
+//@media screen and (min-width: 1200px) {
+//  html {
+//    background-image: url("../../img/preview/buffalo-index-desktop.jpg");
+//  }
+//}
