--- a/app/styles/blocks/_btn.scss
+++ b/app/styles/blocks/_btn.scss
@@ -1,29 +1,51 @@
+$input-btn-padding-y: 0.6rem;
+$input-btn-padding-x: 1.5rem;
+$btn-font-family: $font-base;
+$btn-font-weight: 400;
+$btn-color: #ffffff;
+$btn-color-hover:  #ffffff;
+$btn-background-color: $accent;
+$btn-background-color-hover: $accent-hover;
+$btn-background-color-active: $accent-active;
+$btn-border-color: $accent;
+$btn-border-radius: 0.2rem;
+$btn-box-shadow: 0 0 0 0.2rem rgba($accent, 0.25);
+$btn-active-box-shadow: inset 0 3px 5px rgba(#000000, 0.125);
 .btn {
   position: relative;
-  @include inline-block($valign: top);
-  padding: rem(4px) rem(10px);
-  font-size: rem(10px);
-  line-height: rem(29px);
-  font-family: $font-base;
-  font-weight: 400;
+  @include inline-block($valign: middle);
+  padding: $input-btn-padding-y $input-btn-padding-x;
+  font-size: 1.6rem;
+  line-height: 1.5;
+  font-family: $btn-font-family;
+  font-weight: $btn-font-weight;
   text-decoration: none;
   text-transform: uppercase;
-  color: $light-1;
-  background-color: transparent;
-  border: 1px solid $light-1;
-  border-radius: rem(4px);
+  color: $btn-color;
+  background-color: $btn-background-color;
+  border: 1px solid $btn-border-color;
+  border-radius: $btn-border-radius;
+  text-align: center;
+  white-space: nowrap;
   text-overflow: ellipsis;
-  cursor: pointer;
-  box-sizing: border-box;
-  outline: 0;
-  transition: 0.3s ease;
   user-select: none;
+  transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  outline: 0;
+  box-sizing: border-box;
+  cursor: pointer;
   &:hover {
-    color: $light-1;
-    background-color: $accent;
+    color: $btn-color-hover;
+    background-color: $btn-background-color-hover;
+    border-color: $btn-background-color-hover;
   }
   &:active {
-    color: $light-1;
-    background-color: $accent-active;
+    color: $btn-color-hover;
+    background-color: $btn-background-color-active;
+    border-color: $btn-background-color-active;
+    //box-shadow: 0 0 0 0.2rem rgba(0, 224, 208, 0.5);
+  }
+  &:focus,
+  &.focus {
+    outline: 0;
   }
 }
