--- a/app/styles/blocks/_content.scss
+++ b/app/styles/blocks/_content.scss
@@ -1,3 +1,13 @@
 .content {
   background-color: #f4f6f8;
 }
+.content--index {
+  //display: flex;
+  //justify-content: center;
+  //position: relative;
+  //align-items: center;
+  //width: 100%;
+  //height: 100%;
+  //overflow: hidden;
+  //min-height: 100%;
+}
