--- a/app/styles/layout/_footer.scss
+++ b/app/styles/layout/_footer.scss
@@ -1,8 +1,7 @@
 .footer {
   position: relative;
-  padding-top: rem(20px);
-  padding-bottom: rem(20px);
-  background-color: #599111;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 .footer__copyright {
   display: block;
