--- a/app/templates/basic/_mixins.pug
+++ b/app/templates/basic/_mixins.pug
@@ -21,6 +21,14 @@ mixin svg-inline(name)
 mixin icon-awesome(nameIcon)
   i&attributes(attributes)(class=`fa ${nameIcon.replace(/(\S+\b)/g, 'fa-$1')}` aria-hidden='true')
   
+mixin img-one(className)
+  picture
+    source(type="image/webp"
+    srcset="img/photo-1-mobile.webp 1x, img/photo-1-mobile@2x.webp 2x")
+    |
+    img(src="img/photo-1-mobile.jpg"
+    srcset="img/photo-1-mobile@2x.jpg 2x"
+    alt="Logotype", class="#{className}__img")
     
 mixin img(className)
   picture
@@ -34,7 +42,7 @@ mixin img(className)
     source(media="(min-width: 1200px)"
     srcset="img/photo-1-desktop.jpg 1x, img/photo-1-desktop@2x.jpg 2x")
     source(media="(min-width: 768px)"
-    ssrcset="img/photo-1-tablet.jpg 1x, img/photo-1-tablet@2x.jpg 2x")
+    srcset="img/photo-1-tablet.jpg 1x, img/photo-1-tablet@2x.jpg 2x")
     img(src="img/photo-1-mobile.jpg"
     srcset="img/photo-1-mobile@2x.jpg 2x"
     alt="Logotype", class="#{className}__img")
