--- a/app/styles/basic/_main.scss
+++ b/app/styles/basic/_main.scss
@@ -36,8 +36,8 @@ textarea {
 }
 input:hover,
 textarea:hover {
-  color: $gray-1;
-  cursor: pointer;
+  //color: $gray-1;
+  //cursor: pointer;
 }
 input:focus,
 textarea:focus,
