--- a/app/styles/basic/_variables.scss
+++ b/app/styles/basic/_variables.scss
@@ -1,7 +1,7 @@
 //Переменные//
 //Шрифты//
 $font-base: "Roboto", "Arial", sans-serif;
-$fotn-second: "SansusWebissimo", "Arial", sans-serif;
+$font-second: "SansusWebissimo", "Arial", sans-serif;
 
 //Цвета, фон//
 $accent: #6c9c5a;
