--- a/app/styles/blocks/_user.scss
+++ b/app/styles/blocks/_user.scss
@@ -3,7 +3,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  color: white;
+  color: #ffffff;
+  text-align: center;
 }
 .user__avatar {
   width: 14rem;
