--- a/app/templates/layout/_auth.pug
+++ b/app/templates/layout/_auth.pug
@@ -10,7 +10,7 @@ section.auth
         .auth__form
           include ../blocks/_form-auth
       nav.auth__nav
-        a(href="").btn.auth__nav-link На главную
+        a(href="index.html").btn.auth__nav-link На главную
         a(href="").btn.auth__nav-link Войти
   .auth__copyright
     .copyright
