--- a/app/templates/pages/admin.pug
+++ b/app/templates/pages/admin.pug
@@ -3,7 +3,10 @@ extends ../basic/_template.pug
 block content
   
   .wrapper
-
+    
+    //MAIN CONTENT
     main.content.content--auth
+    
       include ../layout/_auth
   
+    //END CONTENT
