--- a/app/styles/blocks/_menu.scss
+++ b/app/styles/blocks/_menu.scss
@@ -1,33 +1,12 @@
 .menu {
-  max-width: rem(585px);
   display: inline-block;
   vertical-align: top;
   font-size: 1rem;
 }
-.menu__hamburger {
-  position: relative;
-  display: none;
-  padding: rem(5px);
-  outline: none;
-  transition: 0.4s;
-  .hamburger-inner {
-    background-color: $accent;
-    &::before,
-    &::after {
-      background-color: $accent;
-    }
-  }
-}
-.menu__hamburger.is-active ~ .header__action {
-  position: absolute;
-  z-index: 30;
-  top: 0;
-  left: 0;
-}
 .menu__list {
-  display: block;
   @extend %ul-reset;
   font-size: 0;
+  display: flex;
   transition: 0.5s;
 }
 .menu__item {
@@ -38,82 +17,50 @@
 .menu__link {
   position: relative;
   display: block;
-  padding: rem(13px) rem(20px);
-  font-size: rem(16px);
-  line-height: 1;
+  padding: 4rem 2rem;
+  font-size: 6.3rem;
+  line-height: 6.5rem;
   font-weight: 400;
-  font-family: $font-base;
+  font-family: $font-second;
   text-decoration: none;
-  color: $gray-1;
+  text-align: center;
+  text-transform: uppercase;
+  color: #ffffff;
   background-color: transparent;
   cursor: pointer;
   transition: 0.3s;
   &:hover {
-    color: $accent;
+    &::after,
+    &::before {
+      opacity: 1;
+    }
     &::after {
-      width: 60%;
+      left: -2.2rem;
+    }
+    &::before {
+      right: -2.2rem;
     }
   }
-  &:active {
-    color: $accent-active;
-  }
-  &::after {
+  &::after,
+  &::before {
     content: "";
     position: absolute;
-    z-index: 30;
-    bottom: 2px;
-    left: 0;
-    width: 0;
-    margin-left: rem(20px);
-    height: 2px;
-    background-color: $accent;
-    transition: width 0.4s ease;
+    top: 50%;
+    left: -10%;
+    transform: translateY(-50%);
+    width: 2.2rem;
+    height: 0.5rem;
+    display: block;
+    background-color: #ffffff;
+    opacity: 0;
+    transition: left 0.3s linear, opacity 0.3s linear;
   }
-  &--active {
-    color: $accent;
-    &::after {
-      width: 60%;
-    }
+  &::before {
+    left: auto;
+    right: -10%;
+    transition: right 0.3s linear, opacity 0.3s linear;
+  }
+  &:active {
+    color: #ffffff;
   }
 }
-// @media screen and #{($laptop-point-widths-des)}{
-//
-// }
-// @media screen and #{($tablet-point-widths-des)} {
-//   .menu__hamburger {
-//     display: block;
-//   }
-  // .menu__list {
-  //   position: absolute;
-  //   left: rem(1000px);
-  //   opacity: 0;
-  //   &--mobile {
-  //     display: block;
-  //     position: absolute;
-  //     z-index: 30;
-  //     top: rem(32px);
-  //     left: rem(210px);
-  //     width: 62%;
-  //     padding-bottom: rem(40px);
-  //     background-color: #f0f0f2;
-  //     // background-color: red;
-  //     opacity: 1;
-  //     .menu__item {
-  //       display: block;
-  //     }
-  //     .menu__link {
-  //       padding-top: rem(17px);
-  //       padding-bottom: rem(17px);
-  //       font-size: 1.3rem;
-  //       &:hover {
-  //         &::after {
-  //           width: 15%;
-  //         }
-  //       }
-  //     }
-  //   }
-  // }
-// }
-// @media screen and #{($phone-point-widths-des)} {
-//
-// }
