--- a/app/styles/layout/_header.scss
+++ b/app/styles/layout/_header.scss
@@ -1,34 +1,62 @@
 .header {
   position: relative;
-  color: $gray-1;
-  background-color: #599111;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  height: 100vh;
+  color: $light-1;
+  background-color: #80974e;
+  background-image: url("../../img/bg/forest-desktop.png");
+  @extend %cover;
 }
 .header__top {
-  padding: 2rem 0;
-  text-align: center;
-  color: #ffffff;
+  margin: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
-.header__logo {
+.header__socials {
+
+}
+.header__arrow {
+  position: absolute;
+  z-index: 50;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 4rem;
+}
+.header__toggle {
+  position: sticky;
+  z-index: 200;
   display: inline-block;
   vertical-align: middle;
-  align-self: center;
-  font-size: 2rem;
-  // width: 12.5%;
-  // width: rem(120px);
-  // margin-right: 2.55%;
-  //color: #fff;
 }
-.header__desc {
-  font-size: 2rem;
+.header__bg-triangle {
+  position: absolute;
+  z-index: 40;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  font-size: 0;
+  & svg {
+    fill: #ffffff;
+  }
+}
+.header__bottom {
+  position: absolute;
+  z-index: 50;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-@include laptop {
-  .header {
-    background-color: black;
-  }
-}
-@include tablets {
-  .header {
-    background-color: violet;
-  }
-}
+//@include laptop {
+//  .header {
+//    background-color: black;
+//  }
+//}
+//@include tablets {
+//  .header {
+//    background-color: violet;
+//  }
+//}
