--- a/app/templates/layout/_footer.pug
+++ b/app/templates/layout/_footer.pug
@@ -1,3 +1,13 @@
 footer.footer
-  .container
-      span.footer__copyright Yeoman c 2017 . your copy right here
+  .footer__col
+    .footer__menu
+    .footer__socials
+      include ../blocks/_socials
+  .footer__col
+    .footer__quote
+      .quote
+        p.quote__text Всегда пишите код так, будто сопровождать его будет склонный к насилию психопат, который знает, где вы живете.
+        p.quote__author Martin Golding
+  .footer__col
+    .footer__copyright 
+      include ../blocks/_copyright
