--- a/app/templates/layout/_welcome.pug
+++ b/app/templates/layout/_welcome.pug
@@ -8,21 +8,12 @@ section.welcome
     .welcome__box-inner
       .welcome__info
         .welcome__user
-          .user
-            .user__avatar
-              picture
-                source(type="image/webp" srcset="img/content/avatar.jpg 1x, img/content/avatar.jpg 2x")
-                img(src="img/content/avatar.jpg" srcset="img/content/avatar.jpg 2x"
-                  alt="wecolme background", class="user__avatar-img")
-            h1.user__name Владимир Астахов    
-            .user__desc Личный сайт веб-разработчика
+          include ../blocks/_user
         .welcome__socials      
           include ../blocks/_socials
       nav.welcome__nav
         a(href="").btn.welcome__nav-link Мои работы
         a(href="").btn.welcome__nav-link Обо мне
   .welcome__copyright
-    .copyright
-      span.copyright__text &copy; Анатолий Вершинин
-      span.copyright__text 2017
+    include ../blocks/_copyright
     
