add section works

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -26,6 +26,7 @@
 @import "blocks/_form-auth.scss";
 @import "blocks/_arrow-down.scss";
 @import "blocks/_hamburger.scss";
+@import "blocks/_page-title.scss";
 
 
 // layout-секции //
@@ -33,3 +34,4 @@
 @import "./layout/_footer.scss";
 @import "./layout/_welcome.scss";
 @import "./layout/_auth.scss";
+@import "./layout/_works.scss";
