--- a/app/styles/blocks/_hamburger.scss
+++ b/app/styles/blocks/_hamburger.scss
@@ -1,7 +1,7 @@
 // active-class is-active
 
 .hamburger {
-  padding: 1.5rem;
+  padding: 1rem 0;
   opacity: 0.7;
   outline: none;
   &:hover {
@@ -10,7 +10,7 @@
 }
 .hamburger-box {
   width: 4rem;
-  height: 2.4rem;
+  height: 3.5rem;
 }
 .hamburger-inner,
 .hamburger-inner::before,
@@ -23,8 +23,8 @@
   margin-top: -0.2rem;
 }
 .hamburger-inner::before {
-  top: -1.2rem;
+  top: -1.5rem;
 }
 .hamburger--collapse .hamburger-inner::after {
-  top: -2.4rem;
+  top: -3rem;
 }
