--- a/app/styles/layout/_content.scss
+++ b/app/styles/layout/_content.scss
@@ -1,13 +1,10 @@
 .content {
-  background-color: #f4f6f8;
+  background-color: #f8f9f5;
 }
 .content--index {
   //display: flex;
-  //justify-content: center;
-  //position: relative;
-  //align-items: center;
-  //width: 100%;
-  //height: 100%;
-  //overflow: hidden;
-  //min-height: 100%;
 }
+.content--works {
+
+}
+
