--- a/app/styles/layout/_header.scss
+++ b/app/styles/layout/_header.scss
@@ -8,6 +8,17 @@
   background-color: #80974e;
   background-image: url("../../img/bg/forest-desktop.png");
   @extend %cover;
+  &::after {
+    content: "";
+    position: absolute;
+    z-index: 50;
+    top: 0;
+    display: block;
+    width: 100%;
+    height: 24.8rem;
+    background-image: $header-shadow;
+    @extend %cover;
+  }
 }
 .header__top {
   margin: 3rem;
@@ -16,7 +27,8 @@
   justify-content: space-between;
 }
 .header__socials {
-
+  position: sticky;
+  z-index: 200;
 }
 .header__arrow {
   position: absolute;
@@ -39,7 +51,7 @@
   right: 0;
   font-size: 0;
   & svg {
-    fill: #ffffff;
+    fill: #f8f9f5;
   }
 }
 .header__bottom {
