--- a/app/templates/blocks/_user.pug
+++ b/app/templates/blocks/_user.pug
@@ -1,8 +1,12 @@
-.user
-  .user__avatar
-    picture
-      source(type="image/webp" srcset="img/content/avatar.jpg 1x, img/content/avatar.jpg 2x")
-      img(src="img/content/avatar.jpg" srcset="img/content/avatar.jpg 2x"
-      alt="wecolme background", class="user__avatar-img")
-  h1.user__name Владимир Астахов    
-  .user__desc Личный сайт веб-разработчика
+ 
+mixin user(userModificator)
+  - var userModificator = userModificator || "";
+    
+  div(class=`user ${userModificator}`)
+    .user__avatar
+      picture
+        source(type="image/webp" srcset="img/content/avatar.jpg 1x, img/content/avatar.jpg 2x")
+        img(src="img/content/avatar.jpg" srcset="img/content/avatar.jpg 2x"
+        alt="welcome background", class="user__avatar-img")
+    h1.user__name Владимир Астахов    
+    .user__desc Личный сайт веб-разработчика
