--- a/app/templates/pages/works.pug
+++ b/app/templates/pages/works.pug
@@ -1,4 +1,5 @@
-extends ../basic/_template.pug
+extends ../basic/_template
+
 
 block content
   
@@ -14,6 +15,10 @@ block content
     |
     //MAIN CONTENT
     main.content.content--works
+    
+      h1.page-title Мои работы
+      |
+      |
       include ../layout/_works
       |
       |
