--- a/app/templates/pages/works.pug
+++ b/app/templates/pages/works.pug
@@ -22,6 +22,7 @@ block content
       include ../layout/_works
       |
       |
+      include ../layout/_feedback
     //END CONTENT
     |
     |
