--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -35,3 +35,4 @@
 @import "./layout/_welcome.scss";
 @import "./layout/_auth.scss";
 @import "./layout/_works.scss";
+@import "./layout/_feedback.scss";
