--- a/app/styles/blocks/_form.scss
+++ b/app/styles/blocks/_form.scss
@@ -1,69 +1,6 @@
-.contact-form {
-  display: flex;
-  flex-flow: column wrap;
-  justify-content: space-between;
-  width: rem(368px);
-  padding: 5.5%;
-  align-items: center;
-  background-color: $bg-1;
-  border: 1px solid #dedede;
-  border-radius: 4px;
-  box-sizing: border-box;
-}
-.contact-form__block {
-  width: 100%;
-}
-.contact-form__input,
-.contact-form__texarea {
-  display: block;
-  width: 100%;
-  height: rem(40px);
-  margin-bottom: rem(20px);
-  padding: 0 rem(18px);
-  font-size: rem(16px);
-  line-height: 1;
-  font-family: $font-base;
-  font-weight: 400;
-  color: $gray-2;
-  background-color: $bg-1;
-  text-overflow: ellipsis;
-  border: 1px solid #dedede;
-  border-radius: 5px;
-  outline: none;
-  box-sizing: border-box;
-  &:focus {
-    border-color: $accent;
-  }
-  @include placeholder() {
-    font-size: rem(14px);
-    color: $gray-1;
-    font-style: italic;
-  }
-}
-.contact-form__texarea {
-  height: rem(118px);
-  padding: rem(15px) rem(20px);
-  resize: none;
-}
-.contact-form__btn {
-  display: block;
-  width: 100%;
-  padding: 0 rem(10px);
-  color: $gray-1;
-  background-color: $accent;
-  font-size: rem(13px);
-  line-height: rem(40px);
-  font-family: $font-base;
-  font-weight: 400;
-  text-align: center;
-  border: none;
-  &:hover {
-    background-color: $accent-active;
-  }
-}
-
 // input
-.input {
+.input,
+.textarea {
   display: block;
   width: 100%;
   height: 4.5rem;
@@ -90,7 +27,11 @@
     color: rgba(#373e42, 0.5);
   }
 }
-// checkbox
+.textarea {
+  height: 14rem;
+  resize: vertical;
+}
+  // checkbox
 .checkbox {
   &:checked + .checkbox__custom {
     background-color: $accent;
@@ -187,4 +128,81 @@
   font-family: $font-base;
   color: rgba(255, 255, 255, 0.8);
   transition: color 0.2s ease-in-out;
+}
+// ----------------------------------------------
+// contact-form
+.form {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: space-between;
+}
+.form__content {
+  padding: 4rem 2rem 3rem 2rem;
+}
+.form__title {
+  position: relative;
+  margin-bottom: 3.5rem;
+  padding-bottom: 3.5rem;
+  font-size: 3.5rem;
+  line-height: 4rem;
+  font-family: $font-second;
+  font-weight: 400;
+  text-align: center;
+  text-transform: uppercase;
+  color: #566358;
+  &::after {
+    content: "";
+    position: absolute;
+    z-index: 50;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    display: block;
+    width: 9rem;
+    height: 0.3rem;
+    background-color: #566358;
+  }
+}
+.form__row {
+  width: 100%;
+  margin-bottom: 2rem;
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
+.form__input,
+.form__texarea {
+  padding-left: 2rem;
+  padding-right: 2rem;
+  background-color: rgba(255, 255, 255, 0.85);
+  @include placeholder() {
+    font-size: 1.6rem;
+    color: rgba(#5d5a55, 0.5);
+  }
+}
+.form__texarea {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+.form__bottom {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgba(108, 156, 90, 0.7);
+  border-bottom-right-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
+}
+.form__btn {
+  flex: 1;
+  flex-basis: 50%;
+  line-height: 3rem;
+  font-weight: 500;
+  text-transform: none;
+  text-decoration: none;
+  border-radius: 0;
+  color: #ffffff;
+  &:not(:last-child) {
+    border-right: 0.125rem solid rgba(255, 255, 255, 0.5);
+  }
 }
