--- a/app/templates/blocks/_menu.pug
+++ b/app/templates/blocks/_menu.pug
@@ -1,6 +1,8 @@
 nav.menu
   ul.menu__list
     li.menu__item
-      a(href="#").menu__link Мои работы
+      a(href="index.html").menu__link На главную
+    li.menu__item
+      a(href="works.html").menu__link Мои работы
     li.menu__item
       a(href="#").menu__link Обо мне
