--- a/app/templates/layout/_auth.pug
+++ b/app/templates/layout/_auth.pug
@@ -11,7 +11,7 @@ section.auth
           include ../blocks/_form-auth
       nav.auth__nav
         a(href="index.html").btn.auth__nav-link На главную
-        a(href="").btn.auth__nav-link Войти
+        a(href="auth.html").btn.auth__nav-link Войти
   .auth__copyright
     .copyright
       span.copyright__text &copy; Анатолий Вершинин
