--- a/app/templates/layout/_welcome.pug
+++ b/app/templates/layout/_welcome.pug
@@ -14,7 +14,7 @@ section.welcome
         .welcome__socials      
           include ../blocks/_socials
       nav.welcome__nav
-        a(href="#").btn.welcome__nav-link Мои работы
+        a(href="works.html").btn.welcome__nav-link Мои работы
         a(href="#").btn.welcome__nav-link Обо мне
   .welcome__copyright
     include ../blocks/_copyright
