--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -27,6 +27,7 @@
 @import "blocks/_arrow-down.scss";
 @import "blocks/_hamburger.scss";
 @import "blocks/_page-title.scss";
+@import "blocks/_quote.scss";
 
 
 // layout-секции //
