--- a/app/styles/blocks/_copyright.scss
+++ b/app/styles/blocks/_copyright.scss
@@ -1,14 +1,14 @@
 .copyright {
   display: block;
+  color: #ffffff;
 }
 .copyright__text {
   flex: 2 0 100%;
-  //padding: 1rem;
   font-size: 1.6rem;
   line-height: 1.8rem;
   font-family: $font-base;
-  font-weight: 400;
-  color: #ffffff;
+  font-weight: inherit;
+  color: inherit;
   padding: 0 1rem;
   text-align: center;
   &:not(:last-child) {
