--- a/app/templates/layout/_welcome.pug
+++ b/app/templates/layout/_welcome.pug
@@ -15,7 +15,7 @@ section.welcome
           include ../blocks/_socials
       nav.welcome__nav
         a(href="works.html").btn.welcome__nav-link Мои работы
-        a(href="#").btn.welcome__nav-link Обо мне
+        a(href="about.html").btn.welcome__nav-link Обо мне
   .welcome__copyright
     include ../blocks/_copyright
     
