--- a/app/templates/layout/_works.pug
+++ b/app/templates/layout/_works.pug
@@ -5,7 +5,7 @@ section.works
     li.works__filter-item
       a(href="#" data-filter=".landing").works__filter-link Landing Page
     li.works__filter-item
-      a(href="#" data-filter=".shops").works__filter-link Интернет Магазин
+      a(href="#" data-filter=".shops").works__filter-link Интернет Магазины
     li.works__filter-item
       a(href="#" data-filter=".corporative").works__filter-link Корпоративные
     li.works__filter-item
