--- a/app/templates/pages/admin.pug
+++ b/app/templates/pages/admin.pug
@@ -2,7 +2,7 @@ extends ../basic/_forest
 
 block content
   
-  .wrapper
+  .wrapper.wrapper--admin
     
     //MAIN CONTENT
     main.content.content--auth
