--- a/app/templates/pages/index.pug
+++ b/app/templates/pages/index.pug
@@ -2,7 +2,7 @@ extends ../basic/_forest
 
 block content
 
-  .wrapper
+  .wrapper.wrapper--index
     //HEADER
     //include ../layout/_header
     //END HEADER
