--- a/app/styles/blocks/_menu.scss
+++ b/app/styles/blocks/_menu.scss
@@ -64,3 +64,41 @@
     color: #ffffff;
   }
 }
+.menu--footer {
+  & .menu__list {
+    flex-flow: row wrap;
+    justify-content: flex-start;
+  }
+  & .menu__item {
+    margin: 0 2rem;
+
+  }
+  & .menu__link {
+    padding: 1.5rem 0;
+    font-size: 1.6rem;
+    line-height: 2rem;
+    font-family: $font-base;
+    font-weight: 500;
+    text-transform: none;
+    &::after,
+    &::before {
+      content: none;
+    }
+    &::after {
+      content: "";
+      left: 0;
+      right: 0;
+      top: auto;
+      bottom: 0;
+      transform: none;
+      width: 100%;
+      height: 0.3rem;
+    }
+    &:active {
+      color: rgba(255, 255, 255, 0.5);
+      &::after {
+        background-color: rgba(255, 255, 255, 0.5);
+      }
+    }
+  }
+}
