--- a/app/styles/blocks/_wrapper.scss
+++ b/app/styles/blocks/_wrapper.scss
@@ -3,8 +3,14 @@
   display: flex;
   flex-flow: column nowrap;
   //height: 100%;
-  height: 100vh;
+  //height: 100vh;
   //overflow-x: hidden;
+  &--index {
+    height: 100vh;
+  }
+  &--admin {
+    height: 100vh;
+  }
 }
 .wrapper > .header,
 .wrapper > .footer {
