--- a/app/styles/layout/_feedback.scss
+++ b/app/styles/layout/_feedback.scss
@@ -1,6 +1,8 @@
 .feedback {
   position: relative;
   height: 100vh;
+  padding-top: 10rem;
+  text-align: center;
   background-color: #dde3df;
   background-image: url("../../img/bg/forest-bottom.png");
   background-image: url("../../img/bg/forest-bottom.webp");
@@ -9,11 +11,21 @@
 .feedback-form {
   position: absolute;
   z-index: 50;
-  top: 50%;
   left: 50%;
+  top: 35%;
   transform: translate(-50%, -50%);
   width: 38rem;
+  margin: 0 auto;
   background-color: rgba(235, 239, 226, 0.6);
   border-radius: 0.5rem;
   overflow: hidden;
+}
+.feedback__arrow {
+  position: absolute;
+  z-index: 50;
+  left: 50%;
+  bottom: 22%;
+  transform: rotate(180deg) translateX(-50%);
+  display: inline-block;
+  vertical-align: top;
 }
