--- a/app/styles/layout/_footer.scss
+++ b/app/styles/layout/_footer.scss
@@ -1,11 +1,44 @@
 .footer {
-  position: relative;
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+  position: absolute;
+  z-index: 100;
+  bottom: 0;
+  display: flex;
+  flex-wrap: wrap;
+}
+.footer__col {
+  display: flex;
+  justify-content: space-between;
+  flex: 1;
+  padding: 3rem 2rem;
+  background-color: rgba(56, 62, 65, 0.85);
+}
+.footer__col-border {
+  border-right: 1px solid rgba(255, 255, 255, 0.5);
+}
+.footer__col-left {
+  flex-direction: column;
+}
+.footer__menu {
+  margin-bottom: 1.2rem;
+}
+.footer__socials {
+
+}
+.footer__quote {
+
 }
 .footer__copyright {
-  display: block;
+  justify-content: center;
+  flex: 3 0 100%;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   text-align: center;
-  color: #ffffff;
-  font-size: 2rem;
+  background-color: rgba(99, 141, 85, 0.85);
+  .copyright {
+    padding-top: 0.6rem;
+    padding-bottom: 0.6rem;
+  }
+  .copyright__text {
+    font-weight: 300;
+  }
 }
