--- a/app/templates/blocks/_menu.pug
+++ b/app/templates/blocks/_menu.pug
@@ -1,8 +1,13 @@
-nav.menu
-  ul.menu__list
-    li.menu__item
-      a(href="index.html").menu__link На главную
-    li.menu__item
-      a(href="works.html").menu__link Мои работы
-    li.menu__item
-      a(href="#").menu__link Обо мне
+mixin menu(modificator)
+  - var modificator = modificator || "";
+    
+  nav(class=`menu ${modificator}`)
+    ul.menu__list
+      li.menu__item
+        a(href="index.html").menu__link На главную
+      li.menu__item
+        a(href="works.html").menu__link Мои работы
+      li.menu__item
+        a(href="about.html").menu__link Обо мне
+      li.menu__item
+        a(href="admin.html").menu__link Авторизация
