--- a/app/templates/layout/_feedback.pug
+++ b/app/templates/layout/_feedback.pug
@@ -17,3 +17,7 @@ section.feedback
       .form__bottom
         a(href="#" tabindex="4").btn.form__btn Отправить
         a(href="#" tabindex="5").btn.form__btn Очистить
+  .feedback__arrow
+    a(href="#").arrow-down Стрелка вверх
+      +icon("arrow__icon", "arrow-down", 26)
+    
