--- a/app/templates/layout/_footer.pug
+++ b/app/templates/layout/_footer.pug
@@ -1,13 +1,14 @@
+include ../blocks/_menu
+include ../blocks/_socials
+  
 footer.footer
-  .footer__col
-    .footer__menu
-    .footer__socials
-      include ../blocks/_socials
-  .footer__col
-    .footer__quote
-      .quote
-        p.quote__text Всегда пишите код так, будто сопровождать его будет склонный к насилию психопат, который знает, где вы живете.
-        p.quote__author Martin Golding
-  .footer__col
-    .footer__copyright 
-      include ../blocks/_copyright
+    .footer__col.footer__col-left.footer__col-border
+      .footer__menu
+        +menu("menu--footer")
+      .footer__socials
+        +socials("socials--footer")
+    .footer__col
+      .footer__quote
+        include ../blocks/_quote
+    .footer__col.footer__copyright
+        include ../blocks/_copyright
