--- a/app/templates/pages/works.pug
+++ b/app/templates/pages/works.pug
@@ -15,7 +15,7 @@ block content
     |
     //MAIN CONTENT
     main.content.content--works
-    
+      |
       h1.page-title Мои работы
       |
       |
@@ -29,3 +29,6 @@ block content
     //MAIN FOOTER
     include ../layout/_footer
     //END FOOTER
+    |
+    |
+    include ../blocks/_popup
