--- a/app/templates/layout/_about.pug
+++ b/app/templates/layout/_about.pug
@@ -1,1 +1,75 @@
-h2 About Tittle
+include ../blocks/_user
+include  ../blocks/_circles
+
+
+.about
+  section.about__user
+    .about__title
+      h1.page-title.page-title--about Обо мне
+    .about__user-info
+      .user.user--full
+        .user__avatar
+          picture
+            source(type="image/webp" srcset="img/content/main-avatar@1x.webp 1x, img/content/main-avatar@2x.webp 2x")
+            img(src="img/content/main-avatar@1x.jpg" srcset="img/content/main-avatar@2x.jpg 2x"
+            alt="main avatar", class="user__avatar-img")
+        h3.page-title.page-subtitle Кто я
+        p.page-text
+          |Я веб разработчик из Новосибирска. Мне 27 лет. Я занимаюсь разработкой современных сайтов 
+          |и приложений. Мне нравится делать интересные и современные проекты.
+        p.page-text
+          |Этот сайт я сделал в рамках обучения. Чуть позже я освежу в нём свой контент. 
+          |А пока посмотрите, как тут всё классно и красиво!
+  section.about__skills
+    h3.page-title.page-subtitle Чем я могу быть вам полезен
+    p.page-text 
+      |Больше всего меня привлекет Frontend разработка, но я также знаком
+      |и могу решать не сложные задачи на Backend. Но давайте по порядку.
+    .about__skills-block
+      .skills
+        p.skills__group-name Frontend
+        ul.skills__list
+          li.skills__item
+            span.skills__name HTML5
+            span.skill__circles
+              +circles("circle-90")
+          li.skills__item
+            span.skills__name CSS3
+            span.skill__circles
+              +circles("circle-85")
+          li.skills__item
+            span.skills__name JavaScript & jQuery
+            span.skill__circles
+              +circles("circle-60")
+          li.skills__item
+            span.skills__name SVG
+            span.skill__circles
+              +circles("circle-40")
+        p.skills__group-name Backend
+        ul.skills__list
+          li.skills__item
+            span.skills__name Node.js
+            span.skill__circles
+              +circles("circle-15")
+          li.skills__item
+            span.skills__name Mongo.db
+            span.skill__circles
+              +circles("circle-10")
+        p.skills__group-name WorkFlow
+          ul.skills__list
+            li.skills__item
+              span.skills__name Webpack
+              span.skill__circles
+                +circles("circle-25")
+            li.skills__item
+              span.skills__name Gulp
+              span.skill__circles
+                +circles("circle-75")
+            li.skills__item
+              span.skills__name Bower
+              span.skill__circles
+                +circles("circle-85")
+            li.skills__item
+              span.skills__name Git
+              span.skill__circles
+                +circles("circle-70")
