--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -32,6 +32,7 @@
 @import "blocks/_popup.scss";
 @import "blocks/_skills.scss";
 @import "blocks/_circles.scss";
+@import "blocks/_contacts.scss";
 
 
 // layout-секции //
@@ -42,4 +43,4 @@
 @import "./layout/_works.scss";
 @import "./layout/_feedback.scss";
 @import "./layout/_about.scss";
-@import "./layout/_contacs.scss";
+@import "./layout/_adress.scss";
