--- a/app/styles/blocks/_circles.scss
+++ b/app/styles/blocks/_circles.scss
@@ -6,7 +6,7 @@
   stroke: #e0ddd6;
 }
 .circle__second {
-  stroke: #74a263;
+  stroke: $accent;
   stroke-dasharray: 0010 282.6;
   transition: all 1s;
 }
