--- a/app/templates/pages/about.pug
+++ b/app/templates/pages/about.pug
@@ -36,9 +36,9 @@ block content
       include ../layout/_about
       |
       |
-      include ../layout/_contacts
-    |
-    |
+      include ../layout/_adress
+      |
+      |
     //END CONTENT
     |
     |
